--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "name": "ToxicLeo-MD",
   "description": "Toxic Leo Multi Device whatsappbot",
-  "logo": "https://i.postimg.cc/t4V7mPT3/Akash.jpg",
+  "logo": "https://i.postimg.cc/pXZW2gSv/null-20220918-WA0002.jpg",
   "keywords": ["whatsapp"],
   "repository": "https://github.com/Afx-ToxicLeo/LEO-MD",
   "website": "https://github.com/Afx-ToxicLeo/LEO-MD",
