--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "jimp": "^0.16.1",
     "jsdom": "^20.0.0",
     "node-cron": "^3.0.2",
+    "node-fetch": "^2.6.1",
     "node-webpmux": "^3.1.0",
     "pastebin-js": "^1.0.6",
     "pg": "^8.8.0",
