--- a/package.json
+++ b/package.json
@@ -22,7 +22,11 @@
     "automatic",
     "whatsapp web",
     "whatsapp api",
-    "WhatsAsena"
+    "WhatsAsena",
+    "Inrl",
+    "Leo",
+    "Toxic",
+    "Ekash🔥"
   ],
   "author": "ToxicLeo",
   "developer": "Toxic / LEO",
@@ -37,6 +41,7 @@
     "@bochilteam/scraper": "3.0.0",
     "@neeraj-x0/textpro": "^1.0.3",
     "bitly": "^7.1.2",
+    "aes256": "^1.1.0",
     "browser-id3-writer": "^4.4.0",
     "crypto-js": "^4.1.1",
     "file-type": "^16.5.3",
