--- a/package.json
+++ b/package.json
@@ -13,20 +13,12 @@
   "keywords": [
     "whatsapp",
     "bot",
-    "ai",
-    "X-Asena",
-    "api",
-    "unlimited",
-    "asenadev",
-    "machine learning",
-    "automatic",
-    "whatsapp web",
-    "whatsapp api",
-    "WhatsAsena",
+    "abu",
+    "Mod",
     "Inrl",
     "Leo",
     "Toxic",
-    "Ekash🔥"
+    "Akash🔥"
   ],
   "author": "ToxicLeo",
   "developer": "Toxic / LEO",
