--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "scraper-x0": "^1.0.6",
     "sequelize": "^6.23.0",
     "sharp": "^0.30.7",
+    "express": "latest",
     "simple-git": "^3.14.1",
     "sqlite3": "^5.1.1",
     "supervisor": "^0.12.0",
