--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "ToxicLeo",
   "version": "2.0.0",
   "description": "Toxic-Leo is a simple whatsApp Bot.",
-  "main": "./bot.js",
+  "main": "./index.js",
   "scripts": {
-    "start": "node bot.js"
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
