--- a/lib/Dockerfile
+++ b/lib/Dockerfile
@@ -1,4 +1,4 @@
-FROM quay.io/afx-abu/abu-md
+FROM http://quay.io/akash_ak_4/toxicleo
 RUN git clone https://github.com/Afx-ToxicLeo/ToxicLeo /root/Leo/
 WORKDIR /root/Leo/
 RUN yarn install --network-concurrency 1
