--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Toxic-Leo is a simple whatsApp Bot.",
   "main": "./index.js",
   "scripts": {
-    "start": "supervisor -s index.js""
+    "start": "supervisor -s index.js"
   },
   "repository": {
     "type": "git",
