--- a/lib/Dockerfile
+++ b/lib/Dockerfile
@@ -1,4 +1,4 @@
-FROM quay.io/akash_ak_4/toxicleo
+FROM quay.io/afx_toxicleo/toxicleo-md
 RUN git clone https://github.com/Afx-ToxicLeo/ToxicLeo /root/Leo/
 WORKDIR /root/Leo/
 RUN yarn install --network-concurrency 1
